--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <main>
@@ -15,6 +16,6 @@
             <button id="attack-button">Attack</button>
         </section>
         <script src="./index.js" type="module"></script>
-        
+
     </body>
 </html>
